[package]
name = "text-processing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
regex = "1.5.4"
clap = { version = "3.0.13", features = ["derive"] }
serde_json = { version = "1.0.78" }
serde = { version = "1.0.136", features = ["derive"] }
