[package]
name = "multireg"
authors = ["Alex Redden"]
repository = "https://github.com/aredden/rust-multiregex.git"
version = "0.1.0"
edition = "2021"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
regex = "1.5.4"
clap = { version = "3.0.13", features = ["derive"] }
serde_json = { version = "1.0.78" }
serde = { version = "1.0.136", features = ["derive"] }
rayon = "1.5.1"
